--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>DR Log | Welcome</title>
       <link rel="stylesheet" href="./css/style.css">
       <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
-      <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="./css/lightbox.min.css">
       <script type="text/javascript" src="./js/lightbox-plus-jquery.min.js"></script>
 </head>
@@ -20,9 +20,9 @@
 
       <nav>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="places.html">Places</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="places.html">Places</a></li>
+                  <li><a href="profile.html">Profile</a></li>
             </ul>
 
             <div id="toggle">
