--- a/places.html
+++ b/places.html
@@ -7,7 +7,7 @@
       <title>DR Log | Places</title>
       <link rel="stylesheet" href="./css/style.css">
       <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
-      <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="./css/lightbox.min.css">
       <script type="text/javascript" src="./js/lightbox-plus-jquery.min.js"></script>
 </head>
@@ -22,8 +22,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="places.html">Places</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
             </ul>
 
             <div id="toggle">
@@ -38,8 +36,6 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="places.html">Places</a></li>
                   <li><a href="profile.html">Profile</a></li>
-                  <li><a href="login.html">Log In</a></li>
-                  <li><a href="signup.html">Sign Up</a></li>
             </ul>
       </div>
       <div class="northern-h1">
